[package]
name = "libva-rust-example"
version = "0.0.1"
authors = ["Hyunjun Ko <zzoon@igalia.com>"]

[[bin]]
name = "example"
path = "example.rs"

[dependencies.libva-rust]
path = ".."
features = []

[dependencies.x11]
git = "https://github.com/Daggerbot/x11-rs.git"
features = ["xlib"]

[features]
default = []
